objects/Performance_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>ActivityId__c</fullName>
        <label>Activity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivitySubject__c</fullName>
        <label>Activity Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <formula>HYPERLINK("/" &amp; ActivityId__c , ActivitySubject__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <formula>Case__r.RecordType.Name</formula>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Performance Snapshots</relationshipLabel>
        <relationshipName>Performance_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Opt_Completed__c</fullName>
        <label>Date Opt Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IMS_Completing_Rep__c</fullName>
        <label>IMS Completing Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IMS Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Performance_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organic_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organic Case</label>
        <referenceTo>Organic_Analysis__c</referenceTo>
        <relationshipLabel>Performance Snapshots</relationshipLabel>
        <relationshipName>Performance_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_To_Complete__c</fullName>
        <label>Time To Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Performance Snapshot</label>
    <nameField>
        <displayFormat>PSS-{0000000}</displayFormat>
        <label>Performance Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>